--- a/staff_management/views/staff_list_template.xml
+++ b/staff_management/views/staff_list_template.xml
@@ -146,35 +146,13 @@
                                                             <i class="fa fa-edit"/>
                                                             Sửa
                                                         </a>
-                                                        <div class="dropdown d-inline-block ml-1">
-                                                            <button class="btn btn-sm btn-secondary dropdown-toggle"
-                                                                    type="button" data-toggle="dropdown">
-                                                                <i class="fa fa-cog"/>
-                                                                Thao tác
-                                                            </button>
-                                                            <div class="dropdown-menu">
-                                                                <a t-att-href="'/clinic/staff/attendance/%s' % staff.id"
-                                                                   class="dropdown-item"
-                                                                   title="Chấm công">
-                                                                    <i class="fa fa-clock-o"/>
-                                                                    Chấm công
-                                                                </a>
-                                                                <a t-att-href="'/clinic/staff/performance/%s' % staff.id"
-                                                                   class="dropdown-item"
-                                                                   title="Đánh giá hiệu suất">
-                                                                    <i class="fa fa-star"/>
-                                                                    Đánh giá
-                                                                </a>
-                                                                <div class="dropdown-divider"></div>
-                                                                <a t-att-href="'/clinic/staff/%s/delete' % staff.id"
-                                                                   class="dropdown-item text-danger"
-                                                                   title="Xóa"
-                                                                   onclick="return confirm('Bạn có chắc chắn muốn xóa nhân viên này?');">
-                                                                    <i class="fa fa-trash"/>
-                                                                    Xóa
-                                                                </a>
-                                                            </div>
-                                                        </div>
+                                                        <a t-att-href="'/clinic/staff/%s/delete' % staff.id"
+                                                           class="btn btn-sm btn-danger ml-1"
+                                                           title="Xóa"
+                                                           onclick="return confirm('Bạn có chắc chắn muốn xóa nhân viên này?');">
+                                                            <i class="fa fa-trash"/>
+                                                            Xóa
+                                                        </a>
                                                     </div>
                                                 </td>
                                             </tr>
