--- a/clinic_appointment_booking/views/website_templates.xml
+++ b/clinic_appointment_booking/views/website_templates.xml
@@ -130,8 +130,9 @@
                                                     </div>
                                                     <input type="date" name="appointment_date" id="appointment_date"
                                                            class="form-control" required="1"
-                                                           t-att-min="datetime.date.today().strftime('%Y-%m-%d')"/>
+                                                           t-att-min="min_date"/>
                                                 </div>
+                                                <small class="text-muted">Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi</small>
                                             </div>
                                             <div class="form-group mb-3">
                                                 <label for="appointment_time" class="form-label">Giờ hẹn
@@ -213,7 +214,12 @@
 
                                     <div class="alert alert-info mt-4">
                                         <i class="fa fa-info-circle mr-2"></i>
-                                        Lưu ý: Vui lòng đến trước giờ hẹn 15 phút để làm thủ tục
+                                        Lưu ý:
+                                        <ul>
+                                            <li>Vui lòng đến trước giờ hẹn 15 phút để làm thủ tục</li>
+                                            <li>Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi</li>
+                                            <li>Mỗi bác sĩ hoặc phòng khám chỉ có thể phục vụ một lịch hẹn trong khoảng thời gian ±1 giờ</li>
+                                        </ul>
                                     </div>
 
                                     <div class="text-center mt-4">
@@ -302,6 +308,18 @@
                 isValid = false;
                 }
 
+                // Check appointment date is at least tomorrow
+                const appointmentDate = new Date($('#appointment_date').val());
+                const tomorrow = new Date();
+                tomorrow.setDate(tomorrow.getDate() + 1);
+                tomorrow.setHours(0, 0, 0, 0);
+
+                if (appointmentDate &lt; tomorrow) {
+                isValid = false;
+                $('#appointment_date').addClass('is-invalid');
+                alert('Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi.');
+                }
+
                 if (!isValid) {
                 // Scroll to first invalid field
                 $('html, body').animate({
@@ -339,8 +357,7 @@
                 var appointment_time = $('#appointment_time').val();
                 var room_id = $('#room_id').val();
 
-                $('#availability_result').html('&lt;div class="text-center"&gt;&lt;i class="fa fa-spinner fa-spin"&gt;&lt;/i&gt;
-                Đang kiểm tra...&lt;/div&gt;');
+                $('#availability_result').html('<div class="text-center"><i class="fa fa-spinner fa-spin"></i> Đang kiểm tra...</div>');
 
                 $.ajax({
                 url: '/appointment/check_availability',
@@ -361,17 +378,17 @@
                 if (data.result) {
                 var result = data.result;
                 if (result.status === 'success') {
-                $('#availability_result').html('&lt;div class="alert alert-success"&gt;' +
-                '&lt;i class="fa fa-check-circle mr-2"&gt;&lt;/i&gt;' + result.message + '&lt;/div&gt;');
+                $('#availability_result').html('<div class="alert alert-success">' +
+                '<i class="fa fa-check-circle mr-2"></i>' + result.message + '</div>');
                 } else {
-                $('#availability_result').html('&lt;div class="alert alert-danger"&gt;' +
-                '&lt;i class="fa fa-exclamation-circle mr-2"&gt;&lt;/i&gt;' + result.message + '&lt;/div&gt;');
+                $('#availability_result').html('<div class="alert alert-danger">' +
+                '<i class="fa fa-exclamation-circle mr-2"></i>' + result.message + '</div>');
                 }
                 }
                 },
                 error: function() {
-                $('#availability_result').html('&lt;div class="alert alert-danger"&gt;' +
-                '&lt;i class="fa fa-exclamation-circle mr-2"&gt;&lt;/i&gt;Đã xảy ra lỗi khi kiểm tra. Vui lòng thử lại.&lt;/div&gt;');
+                $('#availability_result').html('<div class="alert alert-danger">' +
+                '<i class="fa fa-exclamation-circle mr-2"></i>Đã xảy ra lỗi khi kiểm tra. Vui lòng thử lại.</div>');
                 }
                 });
                 });
