--- a/medical_management/views/website_templates.xml
+++ b/medical_management/views/website_templates.xml
@@ -24,7 +24,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link d-flex align-items-center" href="/medical/images">
-                                            <i class="fa fa-images mr-2"></i> Hình ảnh xét nghiệm
+                                            <i class="fa fa-list mr-2"></i> Hình ảnh xét nghiệm
                                         </a>
                                     </li>
                                     <li class="nav-item">
